<resources>
    <string name="app_name">Covid19_Reminder</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="contactUs">Contact us: Musterman@gmail.com</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string-array name="not_time_arrays">
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
        <item>5 hours</item>
        <item>6 hours</item>
        <item>7 hours</item>
        <item>8 hours</item>
        <item>9 hours</item>
        <item>10 hours</item>
    </string-array>

    <string-array name="distance_arrays">
        <item>10 meters</item>
        <item>20 meters</item>
        <item>30 meters</item>
        <item>40 meters</item>
        <item>50 meters</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_maps">Map</string>
    <string name="timer">Timer</string>
    <string name="time">Time</string>
    <string name="mask_sale">Mask Sale</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="remind_me_later">remind me later</string>
    <string name="did_you_bring_a_mask_with_you">Did you bring a mask with you?</string>
    <string name="no_i_ll_get_a_new_oneh">No, I\'ll get a new one</string>
    <string name="yes">yes</string>
    <string name="i_ll_got_a_new_onet">i\'ll got a new one</string>
    <string name="okay">Okay!</string>
    <string name="please_put_your_mask_on">Please put your mask on!</string>
    <string name="todo">TODO</string>
    <string name="i_am_wearing_the_mask">I am waering the mask</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="you_have_worn_the_mask_for_4_hours_please_change_it">You have reached the maximum time limit wearing this mask, please change it</string>
    <string name="title_activity_notification2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_notification1">MainActivity</string>
    <string name="title_activity_notifications3">MainActivity</string>
    <string name="textview">TextView</string>
</resources>