<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <Button
        android:id="@+id/btn4"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_btn1"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/remind_me_later"
        android:textColor="#000000"
        android:textSize="20sp"
        android:theme="@android:style/ThemeOverlay.Material.Dark"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/button"
        android:text="@string/okay"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="381dp"
        android:layout_height="285dp"
        android:background="@drawable/custom_view"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.21" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="354dp"
        android:layout_height="189dp"
        android:fontFamily="monospace"
        android:text="@string/you_have_worn_the_mask_for_4_hours_please_change_it"
        android:textColor="#000000"
        android:textSize="20sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.318" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="115dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:background="#00BF6E6E"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/stat_notify_error"
        app:tint="@color/button" />


</androidx.constraintlayout.widget.ConstraintLayout>